--- a/htmls/home.html
+++ b/htmls/home.html
@@ -29,9 +29,9 @@
         <span></span>
       </div>
       <nav class="nav" id="nav">
-        <a href="#" class="nav-link">Inicio</a>
-        <a href="#" class="nav-link">Series</a>
-        <a href="#" class="nav-link">Películas</a>
+        <a href="home.html" class="nav-link">Inicio</a>
+        <a href="series.html" class="nav-link">Series</a>
+        <a href="peliculas.html" class="nav-link">Películas</a>
         <div class="dropdown">
           <a href="#" class="nav-link dropdown-toggle">Más</a>
           <div class="dropdown-menu">
