--- a/htmls/peliculas.html
+++ b/htmls/peliculas.html
@@ -54,6 +54,83 @@
     </button>
   </div>
   <!-- SEARCH BAR END -->
-
+  <div class="carousel" id="movieCarousel">
+    <div class="carousel-inner" id="carouselInner">
+      <div class="carousel-item active">
+        <img src="../images/prueba.jpg" alt="High School Musical 2">
+        <div class="carousel-caption">
+          <h5>Crepúsculo</h5>
+          <button class="btn-watch-now">VER AHORA</button>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/bridgerton banner.jpg" alt="Camp Rock">
+        <div class="carousel-caption">
+          <h5>Los Bridgerton</h5>
+          <button class="btn-watch-now">VER AHORA</button>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/fea.jpg" alt="Barbie La Princesa y la Costurera">
+        <div class="carousel-caption">
+          <h5>A 3 Metros sobre el cielo</h5>
+          <button class="btn-watch-now">VER AHORA</button>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control carousel-control-prev" id="prevButton">&#10094;</button>
+    <button class="carousel-control carousel-control-next" id="nextButton">&#10095;</button>
+    <div class="carousel-indicators">
+      <button data-slide-to="0" class="active"></button>
+      <button data-slide-to="1"></button>
+      <button data-slide-to="2"></button>
+    </div>
+  </div>
+  <!-- Carrusel 1 -->
+  <h2 class="titulos">
+    TOP 10 PELÍCULAS HOY</h2>
+  <div class="movie-carousel">
+    <div class="movie-carousel-inner" id="carousel-inner">
+    </div>
+    <button class="movie-carousel-control-prev">&#10094;</button>
+    <button class="movie-carousel-control-next">&#10095;</button>
+  </div>
+   <!-- Carrusel 2 -->
+   <h2 class="titulos">Películas populares de PAI+</h2>
+   <div><p>Ver más</p></div>
+   <div class="movie-carousel">
+     <div class="movie-carousel-inner" id="carousel-inner-series">
+     </div>
+     <button class="movie-carousel-control-prev">&#10094;</button>
+     <button class="movie-carousel-control-next">&#10095;</button>
+   </div>
+ 
+   <!-- Carrusel 3 -->
+   <h2 class="titulos">Mi lista </h2>
+   <div><p>Ver más </p></div>
+   <div class="movie-carousel">
+     <div class="movie-carousel-inner" id="movie-popular-container">
+     </div>
+     <button class="movie-carousel-control-prev">&#10094;</button>
+     <button class="movie-carousel-control-next">&#10095;</button>
+   </div>
+ 
+   <!-- Carrusel 4 -->
+   <h2 class="titulos">Recomendaciones para tí</h2>
+   <div class="movie-carousel">
+     <div class="movie-carousel-inner" id="movie-trending-container">
+     </div>
+     <button class="movie-carousel-control-prev">&#10094;</button>
+     <button class="movie-carousel-control-next">&#10095;</button>
+   </div>
+ 
+   <!-- Carrusel 5 -->
+   <h2 class="titulos">Trending</h2>
+   <div class="movie-carousel">
+     <div class="movie-carousel-inner" id="movie-upcoming-container">
+     </div>
+     <button class="movie-carousel-control-prev">&#10094;</button>
+     <button class="movie-carousel-control-next">&#10095;</button>
+   </div>
 </body>
 </html>
