--- a/htmls/peliculas.html
+++ b/htmls/peliculas.html
@@ -57,21 +57,21 @@
   <div class="carousel" id="movieCarousel">
     <div class="carousel-inner" id="carouselInner">
       <div class="carousel-item active">
-        <img src="../images/prueba.jpg" alt="High School Musical 2">
+        <img src="../imagenes/jo.jpg" alt="joker">
         <div class="carousel-caption">
-          <h5>Crepúsculo</h5>
+          <h5>El Joker</h5>
           <button class="btn-watch-now">VER AHORA</button>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../images/bridgerton banner.jpg" alt="Camp Rock">
+        <img src="../imagenes/" alt="Camp Rock">
         <div class="carousel-caption">
-          <h5>Los Bridgerton</h5>
+          <h5></h5>
           <button class="btn-watch-now">VER AHORA</button>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../images/fea.jpg" alt="Barbie La Princesa y la Costurera">
+        <img src="../imagenes/fea.jpg" alt="Barbie La Princesa y la Costurera">
         <div class="carousel-caption">
           <h5>A 3 Metros sobre el cielo</h5>
           <button class="btn-watch-now">VER AHORA</button>
@@ -90,16 +90,16 @@
   <h2 class="titulos">
     TOP 10 PELÍCULAS HOY</h2>
   <div class="movie-carousel">
-    <div class="movie-carousel-inner" id="carousel-inner">
+    <div class="movie-carousel-inner" id="movie-top10-container">
     </div>
     <button class="movie-carousel-control-prev">&#10094;</button>
     <button class="movie-carousel-control-next">&#10095;</button>
   </div>
    <!-- Carrusel 2 -->
    <h2 class="titulos">Películas populares de PAI+</h2>
-   <div><p>Ver más</p></div>
+   <div><a href=""><p class="enlace">Ver más >></p></a></div>
    <div class="movie-carousel">
-     <div class="movie-carousel-inner" id="carousel-inner-series">
+     <div class="movie-carousel-inner" id="movie-popular-container">
      </div>
      <button class="movie-carousel-control-prev">&#10094;</button>
      <button class="movie-carousel-control-next">&#10095;</button>
@@ -107,7 +107,7 @@
  
    <!-- Carrusel 3 -->
    <h2 class="titulos">Mi lista </h2>
-   <div><p>Ver más </p></div>
+   <div><a href=""><p class="enlace">Ver más >></p></a></div>
    <div class="movie-carousel">
      <div class="movie-carousel-inner" id="movie-popular-container">
      </div>
@@ -123,14 +123,12 @@
      <button class="movie-carousel-control-prev">&#10094;</button>
      <button class="movie-carousel-control-next">&#10095;</button>
    </div>
- 
-   <!-- Carrusel 5 -->
-   <h2 class="titulos">Trending</h2>
-   <div class="movie-carousel">
-     <div class="movie-carousel-inner" id="movie-upcoming-container">
-     </div>
-     <button class="movie-carousel-control-prev">&#10094;</button>
-     <button class="movie-carousel-control-next">&#10095;</button>
-   </div>
+   
+   <!-- para que avance el carrousel -->
+  <script src="../js/CarruselHeader.js"></script>
+  <script src="../js/CarruselDePelis.js"></script>
+  <script src="../js/Popular.js"></script>
+  <script src="../js/Peliculas.js"></script>
+  <script src="../js/top10pelis.js"></script>
 </body>
 </html>
