--- a/htmls/series.html
+++ b/htmls/series.html
@@ -124,6 +124,19 @@
      <button class="movie-carousel-control-next">&#10095;</button>
    </div>
    
+      
+   <!-- FOOTER -->
+   <footer>
+    <div class="container-footer">
+      <p>&copy; 2025 TuSitioWeb. Todos los derechos reservados.</p>
+      <nav class="footer-nav">
+        <a href="#" class="footer-link">Política de Privacidad</a>
+        <a href="#" class="footer-link">Términos y Condiciones</a>
+        <a href="#" class="footer-link">Contacto</a>
+      </nav>
+    </div>
+  </footer>
+  <!-- FOOTER END -->
 
   <!-- para que avance el carrousel -->
    
