--- a/htmls/peliculas.html
+++ b/htmls/peliculas.html
@@ -20,7 +20,7 @@
   <header>
     <div class="container-header">
       <a class="logo" href="#">
-        <img src="/images/Logo_200x100-removebg-preview.png" alt="Logo">
+        <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
       </a>
       <div class="hamburger" id="hamburger">
         <span></span>
@@ -64,9 +64,9 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../imagenes/" alt="Camp Rock">
+        <img src="../imagenes/shallow.jpg" alt="Camp Rock">
         <div class="carousel-caption">
-          <h5></h5>
+          <h5>A Star is Born</h5>
           <button class="btn-watch-now">VER AHORA</button>
         </div>
       </div>
@@ -107,9 +107,9 @@
  
    <!-- Carrusel 3 -->
    <h2 class="titulos">Mi lista </h2>
-   <div><a href=""><p class="enlace">Ver más >></p></a></div>
+   <div><a href=""><p class="enlace">Explorar todo >></p></a></div>
    <div class="movie-carousel">
-     <div class="movie-carousel-inner" id="movie-popular-container">
+     <div class="movie-carousel-inner" id="movie-lista-container">
      </div>
      <button class="movie-carousel-control-prev">&#10094;</button>
      <button class="movie-carousel-control-next">&#10095;</button>
@@ -124,11 +124,24 @@
      <button class="movie-carousel-control-next">&#10095;</button>
    </div>
    
+   <!-- FOOTER -->
+   <footer>
+    <div class="container-footer">
+      <p>&copy; 2025 TuSitioWeb. Todos los derechos reservados.</p>
+      <nav class="footer-nav">
+        <a href="#" class="footer-link">Política de Privacidad</a>
+        <a href="#" class="footer-link">Términos y Condiciones</a>
+        <a href="#" class="footer-link">Contacto</a>
+      </nav>
+    </div>
+  </footer>
+  <!-- FOOTER END -->
    <!-- para que avance el carrousel -->
   <script src="../js/CarruselHeader.js"></script>
   <script src="../js/CarruselDePelis.js"></script>
-  <script src="../js/Popular.js"></script>
-  <script src="../js/Peliculas.js"></script>
   <script src="../js/top10pelis.js"></script>
+  <script src="../js/Peliculas.js"></script>
+  <script src="../js/Peliculalista.js"></script>
+  <script src="../js/Popular.js"></script>
 </body>
 </html>
