ha cambiao de to (home)

--- a/htmls/home.html
+++ b/htmls/home.html
@@ -128,7 +128,7 @@
   </div>
 
   <!-- Carrusel 5 -->
-  <h2 class="titulos">Trending</h2>
+  <h2 class="titulos">Proximos Estrenos</h2>
   <div class="movie-carousel">
     <div class="movie-carousel-inner" id="movie-upcoming-container">
     </div>
@@ -147,7 +147,6 @@
     </div>
   </footer>
   <!-- FOOTER END -->
-  <script src="api.js"></script>
   <script src="../js/Hamburguesa.js"></script>
   <script src="../js/CarruselHeader.js"></script>
   <script src="../js/CarruselDePelis.js"></script>
@@ -155,7 +154,8 @@
   <script src="../js/Listaseries.js"></script>
   <script src="../js/Peliculas.js"></script>
   <script src="../js/Popular.js"></script>
-  ç<script src="../js/ProximosEstrenos.js"></script>
+  <script src="../js/ProximosEstrenos.js"></script>
+  <script src="../js/hovers.js"></script>
 
 </body>
 
