--- a/htmls/series.html
+++ b/htmls/series.html
@@ -90,7 +90,7 @@
   <h2 class="titulos">
     TOP 10 SERIES HOY</h2>
   <div class="movie-carousel">
-    <div class="movie-carousel-inner" id="movie-top10-container">
+    <div class="movie-carousel-inner" id="serie-top10-container">
     </div>
     <button class="movie-carousel-control-prev">&#10094;</button>
     <button class="movie-carousel-control-next">&#10095;</button>
@@ -99,7 +99,7 @@
    <h2 class="titulos">Series populares de PAI+</h2>
    <div><a href=""><p class="enlace">Ver más >></p></a></div>
    <div class="movie-carousel">
-     <div class="movie-carousel-inner" id="serie-trending-container">
+     <div class="movie-carousel-inner" id="serie-popular-container">
      </div>
      <button class="movie-carousel-control-prev">&#10094;</button>
      <button class="movie-carousel-control-next">&#10095;</button>
@@ -109,7 +109,7 @@
    <h2 class="titulos">Mi lista </h2>
    <div><a href=""><p class="enlace">Ver más >></p></a></div>
    <div class="movie-carousel">
-     <div class="movie-carousel-inner" id="carousel-inner-series">
+     <div class="movie-carousel-inner" id="serie-lista-container">
      </div>
      <button class="movie-carousel-control-prev">&#10094;</button>
      <button class="movie-carousel-control-next">&#10095;</button>
@@ -118,7 +118,7 @@
    <!-- Carrusel 4 -->
    <h2 class="titulos">Recomendaciones para tí</h2>
    <div class="movie-carousel">
-     <div class="movie-carousel-inner" id="movie-trending-container">
+     <div class="movie-carousel-inner" id="serie-trending-container">
      </div>
      <button class="movie-carousel-control-prev">&#10094;</button>
      <button class="movie-carousel-control-next">&#10095;</button>
@@ -142,7 +142,10 @@
    
   <script src="../js/CarruselHeader.js"></script>
   <script src="../js/CarruselDePelis.js"></script>
+  <script src="../js/top10series.js"></script>
   <script src="../js/Listaseries.js"></script>
   <script src="../js/trendingseries.js"></script>
+  <script src="../js/Listaseries.js"></script>
+  <script src="../js/PopularSerie.js"></script>
 </body>
 </html>
