--- a/htmls/home.html
+++ b/htmls/home.html
@@ -30,8 +30,8 @@
       </div>
       <nav class="nav" id="nav">
         <a href="#" class="nav-link">Inicio</a>
-        <a href="#" class="nav-link">Series</a>
-        <a href="#" class="nav-link">Películas</a>
+        <a href="../htmls/series.html" class="nav-link">Series</a>
+        <a href="../htmls/peliculas.html" class="nav-link">Películas</a>
         <div class="dropdown">
           <a href="#" class="nav-link dropdown-toggle">Más</a>
           <div class="dropdown-menu">
@@ -64,21 +64,27 @@
         <img src="../images/prueba.jpg" alt="High School Musical 2">
         <div class="carousel-caption">
           <h5>Crepúsculo</h5>
-          <button class="btn-watch-now">VER AHORA</button>
+          <a href="../htmls/visionado.html">
+            <button class="btn-watch-now">VER AHORA</button>
+        </a>        
         </div>
       </div>
       <div class="carousel-item">
         <img src="../images/bridgerton banner.jpg" alt="Camp Rock">
         <div class="carousel-caption">
           <h5>Los Bridgerton</h5>
-          <button class="btn-watch-now">VER AHORA</button>
+          <a href="../htmls/visionado.html">
+            <button class="btn-watch-now">VER AHORA</button>
+        </a>
         </div>
       </div>
       <div class="carousel-item">
         <img src="../images/fea.jpg" alt="Barbie La Princesa y la Costurera">
         <div class="carousel-caption">
           <h5>A 3 Metros sobre el cielo</h5>
-          <button class="btn-watch-now">VER AHORA</button>
+          <a href="../htmls/visionado.html">
+            <button class="btn-watch-now">VER AHORA</button>
+        </a>        
         </div>
       </div>
     </div>
