--- a/htmls/peliculas.html
+++ b/htmls/peliculas.html
@@ -108,7 +108,6 @@
   </div>
 
   <!-- Carrusel Películas populares de PAI+ -->
-  <!-- Carrusel Películas populares de PAI+ -->
 <h2 class="titulos">Películas populares de PAI+</h2>
 <div><a href=""><p class="enlace">Ver más >></p></a></div>
 <div class="movie-carousel pai-carousel"> <!-- Clase 'pai-carousel' agregada -->
@@ -119,13 +118,15 @@
 
 
   <!-- Carrusel lista-->
-  <h2 class="titulos">Mi lista</h2>
-  <div><a href=""><p class="enlace">Explorar todo >></p></a></div>
-  <div class="movie-carousel">
-    <div class="movie-carousel-inner" id="movie-lista-container"></div>
-    <button class="movie-carousel-control-prev">&#10094;</button>
-    <button class="movie-carousel-control-next">&#10095;</button>
-  </div>
+ <!-- Carrusel Mi lista -->
+<h2 class="titulos">Mi lista</h2>
+<div><a href=""><p class="enlace">Explorar todo >></p></a></div>
+<div class="movie-carousel mi-lista-carousel"> <!-- Clase 'mi-lista-carousel' agregada -->
+  <div class="movie-carousel-inner" id="movie-lista-container"></div>
+  <button class="movie-carousel-control-prev">&#10094;</button>
+  <button class="movie-carousel-control-next">&#10095;</button>
+</div>
+
 
   <!-- Carrusel Recomendaciones -->
   <h2 class="titulos">Recomendaciones para tí</h2>
