--- a/htmls/peliculas.html
+++ b/htmls/peliculas.html
@@ -100,7 +100,7 @@
   </div>
   <!-- Carrusel TOP 10 PELÍCULAS HOY -->
 
-  <h2 class="titulos">TOP 10 PELÍCULAS HOY</h2>
+  <h2 class="tituloPrincipal">TOP 10 PELÍCULAS HOY</h2>
   <div class="movie-carousel">
     <div class="movie-carousel-inner" id="movie-top10-container"></div>
     <button class="movie-carousel-control-prev">&#10094;</button>
