--- a/htmls/series.html
+++ b/htmls/series.html
@@ -29,7 +29,7 @@
       </div>
       <nav class="nav" id="nav">
         <a href="home.html" class="nav-link">Inicio</a>
-        <a href="series.html" class="nav-link">Series</a>
+        <a href="series.html" class="nav-link" style="color: #d94dfc;">Series</a>
         <a href="peliculas.html" class="nav-link">Películas</a>
         <div class="dropdown">
           <a href="#" class="nav-link dropdown-toggle">Más</a>
