--- a/htmls/peliculas.html
+++ b/htmls/peliculas.html
@@ -29,7 +29,7 @@
       <nav class="nav" id="nav">
         <a href="home.html" class="nav-link">Inicio</a>
         <a href="series.html" class="nav-link">Series</a>
-        <a href="peliculas.html" class="nav-link">Películas</a>
+        <a href="peliculas.html" class="nav-link" style="color: #d94dfc;">Películas</a>
         <div class="dropdown">
           <a href="#" class="nav-link dropdown-toggle">Más</a>
           <div class="dropdown-menu">
@@ -59,23 +59,12 @@
   <div class="carousel" id="movieCarousel">
     <div class="carousel-inner" id="carouselInner">
       <div class="carousel-item active">
-        <img src="../imagenes/jo.jpg" alt="joker">
-        <div class="carousel-caption">
-          <h5>El Joker</h5>
-          <button class="btn-watch-now">VER AHORA</button>
-          <!-- btn info -->
-          <button class="btn-watch-now">
-            <i class="bi bi-info-circle"></i>
-          </button>
-        </div>
-      </div>
-      <div class="carousel-item">
         <img src="../imagenes/shallow.jpg" alt="Camp Rock">
         <div class="carousel-caption">
           <h5>A Star is Born</h5>
-          <button class="btn-watch-now">VER AHORA</button>
+          <a href="visionado.html"><button class="btn-watch-now">VER AHORA</button></a>
           <button class="btn-watch-now">
-            <i class="bi bi-info-circle"></i>
+            <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
           </button>
         </div>
       </div>
@@ -83,9 +72,19 @@
         <img src="../imagenes/fea.jpg" alt="Barbie La Princesa y la Costurera">
         <div class="carousel-caption">
           <h5>A 3 Metros sobre el cielo</h5>
-          <button class="btn-watch-now">VER AHORA</button>
+          <a href="visionado.html"><button class="btn-watch-now">VER AHORA</button></a>
           <button class="btn-watch-now">
-            <i class="bi bi-info-circle"></i>
+            <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
+          </button>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../imagenes/jo.jpg" alt="joker">
+        <div class="carousel-caption">
+          <h5>El Joker</h5>
+          <a href="visionado.html"><button class="btn-watch-now">VER AHORA</button></a>
+          <button class="btn-watch-now">
+            <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
           </button>
         </div>
       </div>
@@ -98,14 +97,19 @@
       <button data-slide-to="2"></button>
     </div>
   </div>
-  <!-- Carrusel TOP 10 PELÍCULAS HOY -->
 
-  <h2 class="tituloPrincipal">TOP 10 PELÍCULAS HOY</h2>
-  <div class="movie-carousel">
-    <div class="movie-carousel-inner" id="movie-top10-container"></div>
-    <button class="movie-carousel-control-prev">&#10094;</button>
-    <button class="movie-carousel-control-next">&#10095;</button>
-  </div>
+
+<!-- TOP 10 PELÍCULAS HOY -->
+<!-- TOP 10 PELÍCULAS HOY -->
+<h2 class="tituloPrincipal">TOP 10 PELÍCULAS HOY</h2>
+<div class="top10-carousel movie-carousel">  
+  <div class="top10-carousel-inner movie-carousel-inner" id="movie-top10-container"></div>  
+  <button class="movie-carousel-control-prev">&#10094;</button>
+  <button class="movie-carousel-control-next">&#10095;</button>
+</div>
+
+
+
 
   <!-- Carrusel Películas populares de PAI+ -->
 <h2 class="titulos">Películas populares de PAI+</h2>
@@ -117,7 +121,6 @@
 </div>
 
 
-  <!-- Carrusel lista-->
  <!-- Carrusel Mi lista -->
 <h2 class="titulos">Mi lista</h2>
 <div><a href=""><p class="enlace">Explorar todo >></p></a></div>
