--- a/htmls/peliculas.html
+++ b/htmls/peliculas.html
@@ -62,7 +62,8 @@
         <img src="../imagenes/shallow.jpg" alt="Camp Rock">
         <div class="carousel-caption">
           <h5>A Star is Born</h5>
-          <a href="visionado.html"><button class="btn-watch-now">VER AHORA</button></a>
+          <a href="visionado.html"><button class="btn-watch-now aparecer" >VER AHORA</button></a>
+          <button class="btn play-btn ocultar">▶</button>
           <button class="btn-watch-now">
             <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
           </button>
@@ -72,7 +73,8 @@
         <img src="../imagenes/fea.jpg" alt="Barbie La Princesa y la Costurera">
         <div class="carousel-caption">
           <h5>A 3 Metros sobre el cielo</h5>
-          <a href="visionado.html"><button class="btn-watch-now">VER AHORA</button></a>
+          <a href="visionado.html"><button class="btn-watch-now aparecer" >VER AHORA</button></a>
+          <button class="btn play-btn ocultar">▶</button>
           <button class="btn-watch-now">
             <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
           </button>
@@ -82,7 +84,8 @@
         <img src="../imagenes/jo.jpg" alt="joker">
         <div class="carousel-caption">
           <h5>El Joker</h5>
-          <a href="visionado.html"><button class="btn-watch-now">VER AHORA</button></a>
+          <a href="visionado.html"><button class="btn-watch-now aparecer" >VER AHORA</button></a>
+          <button class="btn play-btn ocultar">▶</button>
           <button class="btn-watch-now">
             <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
           </button>
@@ -100,8 +103,7 @@
 
 
 <!-- TOP 10 PELÍCULAS HOY -->
-<!-- TOP 10 PELÍCULAS HOY -->
-<h2 class="tituloPrincipal">TOP 10 PELÍCULAS HOY</h2>
+<h2 class="tituloPrincipal">TOP 10 <span>PELÍCULAS</span> HOY</h2>
 <div class="top10-carousel movie-carousel">  
   <div class="top10-carousel-inner movie-carousel-inner" id="movie-top10-container"></div>  
   <button class="movie-carousel-control-prev">&#10094;</button>
