--- a/htmls/peliculas.html
+++ b/htmls/peliculas.html
@@ -155,6 +155,8 @@
   <!-- FOOTER END -->
 
   <!-- Scripts -->
+   
+  <script src="../js/Hamburguesa.js"></script>
   <script src="../js/CarruselHeader.js"></script>
   <script src="../js/CarruselDePelis.js"></script>
   <script src="../js/top10pelis.js"></script>
