--- a/htmls/series.html
+++ b/htmls/series.html
@@ -20,7 +20,7 @@
   <header>
     <div class="container-header">
       <a class="logo" href="#">
-        <img src="/images/Logo_200x100-removebg-preview.png" alt="Logo">
+        <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
       </a>
       <div class="hamburger" id="hamburger">
         <span></span>
@@ -60,21 +60,33 @@
         <img src="../imagenes/darknombre.jpg" alt="Dark">
         <div class="carousel-caption">
           <h5>Dark</h5>
-          <button class="btn-watch-now">VER AHORA</button>
+          <a href="visionado.html"><button class="btn-watch-now aparecer" >VER AHORA</button></a>
+          <button class="btn play-btn ocultar">▶</button>
+          <button class="btn-watch-now">
+            <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
+          </button>
         </div>
       </div>
       <div class="carousel-item">
         <img src="../imagenes/internado.jpg" alt="internado" class="mover_img_abajo">
         <div class="carousel-caption">
           <h5>El internado</h5>
-          <button class="btn-watch-now">VER AHORA</button>
+          <a href="visionado.html"><button class="btn-watch-now aparecer" >VER AHORA</button></a>
+          <button class="btn play-btn ocultar">▶</button>
+          <button class="btn-watch-now">
+            <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
+          </button>
         </div>
       </div>
       <div class="carousel-item">
         <img src="../imagenes/bridgerton banner.jpg" alt="Bridgerton">
         <div class="carousel-caption">
           <h5>Los Bridgerton</h5>
-          <button class="btn-watch-now">VER AHORA</button>
+          <a href="visionado.html"><button class="btn-watch-now aparecer" >VER AHORA</button></a>
+          <button class="btn play-btn ocultar">▶</button>
+          <button class="btn-watch-now">
+            <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
+          </button>
         </div>
       </div>
     </div>
@@ -87,8 +99,8 @@
     </div>
   </div>
   <!-- Carrusel 1 -->
-  <h2 class="titulos">
-    TOP 10 SERIES HOY</h2>
+  <h2 class="tituloPrincipal">
+    TOP 10 <span>SERIES</span> HOY</h2>
   <div class="movie-carousel">
     <div class="movie-carousel-inner" id="serie-top10-container">
     </div>
@@ -99,7 +111,7 @@
    <h2 class="titulos">Series populares de PAI+</h2>
    <div><a href=""><p class="enlace">Ver más >></p></a></div>
    <div class="movie-carousel">
-     <div class="movie-carousel-inner" id="serie-popular-container">
+     <div class="movie-carousel-inner" id="carousel-inner">
      </div>
      <button class="movie-carousel-control-prev">&#10094;</button>
      <button class="movie-carousel-control-next">&#10095;</button>
@@ -140,7 +152,10 @@
 
   <!-- para que avance el carrousel -->
    
+  
+  <script src="../js/Hamburguesa.js"></script>
   <script src="../js/CarruselHeader.js"></script>
+  <script src="../js/UltimosEps.js"></script>
   <script src="../js/CarruselDePelis.js"></script>
   <script src="../js/top10series.js"></script>
   <script src="../js/Listaseries.js"></script>
