falta mi lista por ajustar

--- a/htmls/series.html
+++ b/htmls/series.html
@@ -98,19 +98,21 @@
       <button data-slide-to="2"></button>
     </div>
   </div>
-  <!-- Carrusel 1 -->
+  <!-- Top series -->
   <h2 class="tituloPrincipal">
     TOP 10 <span>SERIES</span> HOY</h2>
-  <div class="movie-carousel">
-    <div class="movie-carousel-inner" id="serie-top10-container">
+  <div class=" top10-carousel movie-carousel">
+    <div class="movie-carousel-inner top10-carousel-inner" id="serie-top10-container">
     </div>
     <button class="movie-carousel-control-prev">&#10094;</button>
     <button class="movie-carousel-control-next">&#10095;</button>
   </div>
+
+  
    <!-- Carrusel 2 -->
    <h2 class="titulos">Series populares de PAI+</h2>
    <div><a href=""><p class="enlace">Ver más >></p></a></div>
-   <div class="movie-carousel">
+   <div class="movie-carousel pai-carousel">
      <div class="movie-carousel-inner" id="carousel-inner">
      </div>
      <button class="movie-carousel-control-prev">&#10094;</button>
@@ -118,19 +120,18 @@
    </div>
  
    <!-- Carrusel 3 -->
-   <h2 class="titulos">Mi lista </h2>
-   <div><a href=""><p class="enlace">Ver más >></p></a></div>
-   <div class="movie-carousel">
-     <div class="movie-carousel-inner" id="serie-lista-container">
-     </div>
-     <button class="movie-carousel-control-prev">&#10094;</button>
-     <button class="movie-carousel-control-next">&#10095;</button>
-   </div>
+   <h2 class="titulos">Mi lista</h2>
+<div><a href=""><p class="enlace">Explorar todo >></p></a></div>
+<div class="movie-carousel mi-lista-carousel"> <!-- Clase 'mi-lista-carousel' agregada -->
+  <div class="movie-carousel-inner" id="serie-trending-container"></div>
+  <button class="movie-carousel-control-prev">&#10094;</button>
+  <button class="movie-carousel-control-next">&#10095;</button>
+</div>
  
    <!-- Carrusel 4 -->
    <h2 class="titulos">Recomendaciones para tí</h2>
    <div class="movie-carousel">
-     <div class="movie-carousel-inner" id="serie-trending-container">
+     <div class="movie-carousel-inner" id="carousel-inner-series">
      </div>
      <button class="movie-carousel-control-prev">&#10094;</button>
      <button class="movie-carousel-control-next">&#10095;</button>
