--- a/htmls/series.html
+++ b/htmls/series.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <!-- HEADER -->
-  <header>
+  <header style="position: fixed !important;top: 0 !important;left: 0 !important;width: 100% !important;background-color: rgb(20, 20, 20) !important;padding: 10px 20px !important;z-index: 9999 !important;">
     <div class="container-header">
       <a class="logo" href="#">
         <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
@@ -47,7 +47,7 @@
   </header>
   <!-- HEADER END -->
      <!-- SEARCH BAR -->
-  <div class="search-bar">
+  <div class="search-bar" style="position: fixed !important;top: 60px !important;left: 0 !important;width: 100% !important;background-color: rgb(20, 20, 20) !important;padding: 10px 20px !important;z-index: 9999 !important;">
     <input type="text" placeholder="Buscar películas, series, actores..." class="search-input">
     <button class="search-button">
       <i class="bi bi-search"></i>
