--- a/htmls/home.html
+++ b/htmls/home.html
@@ -21,7 +21,7 @@
   <header style="position: fixed !important;top: 0 !important;left: 0 !important;width: 100% !important;background-color: rgb(20, 20, 20) !important;padding: 10px 20px !important;z-index: 9999 !important;">
     <div class="container-header">
       <a class="logo" href="#">
-        <img src="/images/Logo_200x100-removebg-preview.png" alt="Logo">
+        <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
       </a>
       <div class="hamburger" id="hamburger">
         <span></span>
@@ -29,7 +29,7 @@
         <span></span>
       </div>
       <nav class="nav" id="nav">
-        <a href="#" class="nav-link">Inicio</a>
+        <a href="#" class="nav-link" style="color: #d94dfc;">Inicio</a>
         <a href="../htmls/series.html" class="nav-link">Series</a>
         <a href="../htmls/peliculas.html" class="nav-link">Películas</a>
         <div class="dropdown">
@@ -61,7 +61,7 @@
   <div class="carousel" id="movieCarousel">
     <div class="carousel-inner" id="carouselInner">
       <div class="carousel-item active">
-        <img src="../images/prueba.jpg" alt="High School Musical 2">
+        <img src="../imagenes/prueba.jpg" alt="High School Musical 2">
         <div class="carousel-caption">
           <h5>Crepúsculo</h5>
           <a href="../htmls/visionado.html">
@@ -144,7 +144,7 @@
   <!-- FOOTER -->
   <footer>
     <div class="container-footer">
-      <p>&copy; 2025 TuSitioWeb. Todos los derechos reservados.</p>
+      <p>&copy; 2025 PAI+. Todos los derechos reservados.</p>
       <nav class="footer-nav">
         <a href="#" class="footer-link">Política de Privacidad</a>
         <a href="#" class="footer-link">Términos y Condiciones</a>
