--- a/htmls/peliculas.html
+++ b/htmls/peliculas.html
@@ -144,7 +144,7 @@
   <!-- FOOTER -->
   <footer>
     <div class="container-footer">
-      <p>&copy; 2025 TuSitioWeb. Todos los derechos reservados.</p>
+      <p>&copy; 2025 PAI+. Todos los derechos reservados.</p>
       <nav class="footer-nav">
         <a href="#" class="footer-link">Política de Privacidad</a>
         <a href="#" class="footer-link">Términos y Condiciones</a>
