--- a/htmls/home.html
+++ b/htmls/home.html
@@ -70,7 +70,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../images/bridgerton banner.jpg" alt="Camp Rock">
+        <img src="../imagenes/bridgerton banner.jpg" alt="Camp Rock">
         <div class="carousel-caption">
           <h5>Los Bridgerton</h5>
           <a href="../htmls/visionado.html">
@@ -79,7 +79,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../images/fea.jpg" alt="Barbie La Princesa y la Costurera">
+        <img src="../imagenes/fea.jpg" alt="Barbie La Princesa y la Costurera">
         <div class="carousel-caption">
           <h5>A 3 Metros sobre el cielo</h5>
           <a href="../htmls/visionado.html">
