--- a/htmls/visionado.html
+++ b/htmls/visionado.html
@@ -10,7 +10,7 @@
 <body class="visionado-container">
     <div class="video-container">
         <video width="100%" height="auto" controls autoplay>
-            <source src="../images/Rick Astley - Never Gonna Give You Up (Official Music Video).mp4" type="video/mp4">
+            <source src="../imagenes/Rick Astley - Never Gonna Give You Up (Official Music Video).mp4" type="video/mp4">
         </video>
     </div>
     <a href="../htmls/home.html" class="back-arrow">
