--- a/htmls/home.html
+++ b/htmls/home.html
@@ -18,7 +18,7 @@
 
 <body>
   <!-- HEADER -->
-  <header style="position: fixed !important;top: 0 !important;left: 0 !important;width: 100% !important;background-color: rgb(20, 20, 20) !important;padding: 10px 20px !important;z-index: 9999 !important;">
+  <header>
     <div class="container-header">
       <a class="logo" href="#">
         <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
@@ -40,8 +40,8 @@
           </div>
         </div>
         <div class="auth-buttons">
-          <a href="#" class="btn">Registrarse</a>
-          <a href="#" class="btn btn-outline">Iniciar sesión</a>
+          <a href="#">Registrarse</a>
+          <a href="#" class="login-link">Iniciar sesión</a>
         </div>
       </nav>
     </div>
@@ -49,7 +49,7 @@
   <!-- HEADER END -->
 
   <!-- SEARCH BAR -->
-  <div class="search-bar" style="position: fixed !important;top: 60px !important;left: 0 !important;width: 100% !important;background-color: rgb(20, 20, 20) !important;padding: 10px 20px !important;z-index: 9999 !important;">
+  <div class="search-bar">
     <input type="text" placeholder="Buscar películas, series, actores..." class="search-input">
     <button class="search-button">
       <i class="bi bi-search"></i>
@@ -66,7 +66,7 @@
           <h5>Crepúsculo</h5>
           <a href="../htmls/visionado.html">
             <button class="btn-watch-now">VER AHORA</button>
-        </a>        
+          </a>
         </div>
       </div>
       <div class="carousel-item">
@@ -75,7 +75,7 @@
           <h5>Los Bridgerton</h5>
           <a href="../htmls/visionado.html">
             <button class="btn-watch-now">VER AHORA</button>
-        </a>
+          </a>
         </div>
       </div>
       <div class="carousel-item">
@@ -84,7 +84,7 @@
           <h5>A 3 Metros sobre el cielo</h5>
           <a href="../htmls/visionado.html">
             <button class="btn-watch-now">VER AHORA</button>
-        </a>        
+          </a>
         </div>
       </div>
     </div>
