--- a/htmls/home.html
+++ b/htmls/home.html
@@ -20,7 +20,7 @@
   <!-- HEADER -->
   <header>
     <div class="container-header">
-      <a class="logo" href="#">
+      <a class="logo" href="./home.html">
         <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
       </a>
       <div class="hamburger" id="hamburger">
@@ -32,18 +32,19 @@
         <a href="#" class="nav-link" style="color: #d94dfc;">Inicio</a>
         <a href="../htmls/series.html" class="nav-link">Series</a>
         <a href="../htmls/peliculas.html" class="nav-link">Películas</a>
-        <div class="dropdown">
+        <div class="dropdown" id="dropdown">
           <a href="#" class="nav-link dropdown-toggle">Más</a>
           <div class="dropdown-menu">
             <a href="#" class="dropdown-item">Novedades</a>
             <a href="#" class="dropdown-item">Próximamente</a>
+            <button class="close-dropdown" id="close-dropdown">Cerrar</button>
           </div>
         </div>
         <div class="auth-buttons">
           <a href="#">Registrarse</a>
           <a href="#" class="login-link">Iniciar sesión</a>
         </div>
-      </nav>
+      </nav>      
     </div>
   </header>
   <!-- HEADER END -->
