--- a/htmls/peliculas.html
+++ b/htmls/peliculas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,46 +15,178 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/estilos.css">
 </head>
-<body>
-  <!-- HEADER -->
-  <header style="position: fixed !important;top: 0 !important;left: 0 !important;width: 100% !important;background-color: rgb(20, 20, 20) !important;padding: 10px 20px !important;z-index: 9999 !important;">
-    <div class="container-header">
-      <a class="logo" href="#">
-        <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
-      </a>
-      <div class="hamburger" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <nav class="nav" id="nav">
-        <a href="home.html" class="nav-link">Inicio</a>
-        <a href="series.html" class="nav-link">Series</a>
-        <a href="peliculas.html" class="nav-link" style="color: #d94dfc;">Películas</a>
-        <div class="dropdown">
-          <a href="#" class="nav-link dropdown-toggle">Más</a>
-          <div class="dropdown-menu">
-            <a href="#" class="dropdown-item">Novedades</a>
-            <a href="#" class="dropdown-item">Próximamente</a>
-          </div>
-        </div>
-        <div class="auth-buttons">
-          <a href="#" class="btn">Registrarse</a>
-          <a href="#" class="btn btn-outline">Iniciar sesión</a>
-        </div>
-      </nav>
-    </div>
-  </header>
-  <!-- HEADER END -->
 
-  <!-- SEARCH BAR -->
-  <div class="search-bar" style="position: fixed !important;top: 60px !important;left: 0 !important;width: 100% !important;background-color: rgb(20, 20, 20) !important;padding: 10px 20px !important;z-index: 9999 !important;">
-    <input type="text" placeholder="Buscar películas, series, actores..." class="search-input">
-    <button class="search-button">
-      <i class="bi bi-search"></i>
-    </button>
-  </div>
-  <!-- SEARCH BAR END -->
+<body>
+  <!DOCTYPE html>
+  <html lang="en">
+
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Detalle peli</title>
+    <!-- Tipografía -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:wght@100..900&family=Nunito:wght@200..1000&family=Open+Sans:wght@300..800&display=swap"
+      rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- Estilos -->
+    <link rel="stylesheet" href="../css/estilos.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
+    <script src="../js/detalle_peli.js"></script>
+
+  </head>
+
+  <body>
+    <!-- HEADER -->
+    <header>
+      <div class="container-header">
+        <a class="logo" href="./home.html">
+          <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
+        </a>
+        <div class="hamburger" id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <nav class="nav" id="nav">
+          <a href="#" class="nav-link" style="color: #d94dfc;">Inicio</a>
+          <a href="../htmls/series.html" class="nav-link">Series</a>
+          <a href="../htmls/peliculas.html" class="nav-link">Películas</a>
+          <div class="dropdown" id="dropdown">
+            <a href="#" class="nav-link dropdown-toggle">Más</a>
+            <div class="dropdown-menu">
+              <a href="#" class="dropdown-item">Novedades</a>
+              <a href="#" class="dropdown-item">Próximamente</a>
+              <button class="close-dropdown" id="close-dropdown">Cerrar</button>
+            </div>
+          </div>
+          <div class="auth-buttons">
+            <a href="#">Registrarse</a>
+            <a href="#" class="login-link">Iniciar sesión</a>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <!-- HEADER END -->
+
+    <!-- SEARCH BAR -->
+    <div class="search-bar">
+      <input type="text" placeholder="Buscar películas, series, actores..." class="search-input">
+      <button class="search-button">
+        <i class="bi bi-search"></i>
+      </button>
+    </div>
+    <!-- SEARCH BAR END -->
+
+
+    <!-- BODY -->
+
+
+    <!-- SECCIÓN PORTADA -->
+    <section class="portada">
+      <img class="portada__img" src="../imagenes/hsm.webp" alt="">
+      <div class="portada__fondo"></div>
+      <div class="portada__info">
+        <img src="../imagenes/hsmLogo.png" class="info__logo">
+
+        <img src="../imagenes/compose.png" class="info__compose">
+        <h5>2007 - 1h 56 min - De adolescente a adulto, Musicales</h5>
+        <h2 class="portada__descripcion">Los Wildcats de East High se enfrentan al verano y dejan que sus talentos
+          brillen.</h2>
+        <button class="portada__btn" type="submit"><i class="bi bi-play-fill"></i>VER</button>
+        <button class="portada__btn añadir"><i class="bi bi-plus"></i></button>
+      </div>
+    </section>
+
+    <!-- SECCIÓN DETALLES -->
+    <section class="detalles">
+      <div class="detalles__selector">
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Detalles</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="tab-trailer" href="#">Tráiler</a>
+          </li>
+        </ul>
+      </div>
+
+      <div id="contenido-detalles">
+        <div class="detalles__descripcion">
+          <h2>High School Musical 2</h2>
+          <p>No hay clases, así que es hora de cantar, bailar y celebrar para los Wildcats de East High.
+            Trabajando en un club de campo, los adolescentes se divertirán y sus amistades y relaciones serán
+            puestas a prueba. Troy (Zac Efron) está emocionado con su nuevo trabajo, pero todo forma parte del
+            plan de Sharpay (Ashley Tisdale) para mantenerlo alejado de Gabriella (Vanessa Hudgens). <br> Los
+            Wildcats de East High siempre quieren pasárselo bien en vacaciones. Troy acepta entusiasmado un
+            trabajo en un club, pero todo forma parte del plan de Sharpay para alejarle de Gabriella. ¿Qué
+            pasará en la noche de la función?</p>
+        </div>
+
+        <div class="detalles__info">
+
+          <ul class="info">
+            <div class="parte1">
+              <li>Duración: <br>1 h 56 min</li><br>
+              <li>Fecha de estreno: <br>2007</li><br>
+              <li>Género: <br>De adolescente a adulto, Musicales </li><br>
+              <li>Calificación: <br><img src="../imagenes/compose0+.webp" alt=""></li><br>
+              <li>Disponible en los siguientes formatos: <br>
+                <img src="../imagenes/composeHD.webp" alt="">
+                <img src="../imagenes/compose51.webp" alt="">
+                <img src="../imagenes/composeCC.webp" alt="">
+              </li><br>
+            </div>
+            <div class="parte2">
+              <li>Dirección: <br>Kenny Ortega</li><br>
+              <li>Con: <br>Zac Efron <br>
+                Vanessa Hudgens <br>
+                Ashley Tisdale <br>
+                Lucas Grabeel <br>
+                Corbin Bleu <br>
+                Monique Coleman</li>
+            </div>
+          </ul>
+        </div>
+      </div>
+
+      <div id="contenido-trailer" style="display: none;">
+        <div class="trailer__img">
+          <video src="../imagenes/trailer.mp4" controls loop poster="../imagenes/trailer.webp"></video>
+        </div>
+
+        <div class="trailer__descripcion">
+          <p>(2min)</p>
+          <p>Los Wildcats de East High siempre quieren pasárselo bien en vacaciones. Troy acepta entusiasmado un
+            trabajo en un club, pero todo forma parte del plan de Sharpay para alejarle de Gabriella. ¿Qué
+            pasará en la noche de la función?</p>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="container-footer">
+        <p>&copy; 2025 PAI+. Todos los derechos reservados.</p>
+        <nav class="footer-nav">
+          <a href="#" class="footer-link">Política de Privacidad</a>
+          <a href="#" class="footer-link">Términos y Condiciones</a>
+          <a href="#" class="footer-link">Contacto</a>
+        </nav>
+      </div>
+    </footer>
+  </body>
+
+  </html>
 
   <!-- Carrusel de Películas -->
   <div class="carousel" id="movieCarousel">
@@ -62,7 +195,7 @@
         <img src="../imagenes/shallow.jpg" alt="Camp Rock">
         <div class="carousel-caption">
           <h5>A Star is Born</h5>
-          <a href="visionado.html"><button class="btn-watch-now aparecer" >VER AHORA</button></a>
+          <a href="visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
           <button class="btn play-btn ocultar">▶</button>
           <button class="btn-watch-now">
             <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
@@ -73,7 +206,7 @@
         <img src="../imagenes/fea.jpg" alt="Barbie La Princesa y la Costurera">
         <div class="carousel-caption">
           <h5>A 3 Metros sobre el cielo</h5>
-          <a href="visionado.html"><button class="btn-watch-now aparecer" >VER AHORA</button></a>
+          <a href="visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
           <button class="btn play-btn ocultar">▶</button>
           <button class="btn-watch-now">
             <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
@@ -84,7 +217,7 @@
         <img src="../imagenes/jo.jpg" alt="joker">
         <div class="carousel-caption">
           <h5>El Joker</h5>
-          <a href="visionado.html"><button class="btn-watch-now aparecer" >VER AHORA</button></a>
+          <a href="visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
           <button class="btn play-btn ocultar">▶</button>
           <button class="btn-watch-now">
             <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
@@ -102,35 +235,39 @@
   </div>
 
 
-<!-- TOP 10 PELÍCULAS HOY -->
-<h2 class="tituloPrincipal">TOP 10 <span>PELÍCULAS</span> HOY</h2>
-<div class="top10-carousel movie-carousel">  
-  <div class="top10-carousel-inner movie-carousel-inner" id="movie-top10-container"></div>  
-  <button class="movie-carousel-control-prev">&#10094;</button>
-  <button class="movie-carousel-control-next">&#10095;</button>
-</div>
+  <!-- TOP 10 PELÍCULAS HOY -->
+  <h2 class="tituloPrincipal">TOP 10 <span>PELÍCULAS</span> HOY</h2>
+  <div class="top10-carousel movie-carousel">
+    <div class="top10-carousel-inner movie-carousel-inner" id="movie-top10-container"></div>
+    <button class="movie-carousel-control-prev">&#10094;</button>
+    <button class="movie-carousel-control-next">&#10095;</button>
+  </div>
 
 
 
 
   <!-- Carrusel Películas populares de PAI+ -->
-<h2 class="titulos">Películas populares de PAI+</h2>
-<div><a href=""><p class="enlace">Ver más >></p></a></div>
-<div class="movie-carousel pai-carousel"> <!-- Clase 'pai-carousel' agregada -->
-  <div class="movie-carousel-inner" id="movie-popular-container"></div>
-  <button class="movie-carousel-control-prev">&#10094;</button>
-  <button class="movie-carousel-control-next">&#10095;</button>
-</div>
+  <h2 class="titulos">Películas populares de PAI+</h2>
+  <div><a href="">
+      <p class="enlace">Ver más >></p>
+    </a></div>
+  <div class="movie-carousel pai-carousel"> <!-- Clase 'pai-carousel' agregada -->
+    <div class="movie-carousel-inner" id="movie-popular-container"></div>
+    <button class="movie-carousel-control-prev">&#10094;</button>
+    <button class="movie-carousel-control-next">&#10095;</button>
+  </div>
 
 
- <!-- Carrusel Mi lista -->
-<h2 class="titulos">Mi lista</h2>
-<div><a href=""><p class="enlace">Explorar todo >></p></a></div>
-<div class="movie-carousel mi-lista-carousel"> <!-- Clase 'mi-lista-carousel' agregada -->
-  <div class="movie-carousel-inner" id="movie-lista-container"></div>
-  <button class="movie-carousel-control-prev">&#10094;</button>
-  <button class="movie-carousel-control-next">&#10095;</button>
-</div>
+  <!-- Carrusel Mi lista -->
+  <h2 class="titulos">Mi lista</h2>
+  <div><a href="">
+      <p class="enlace">Explorar todo >></p>
+    </a></div>
+  <div class="movie-carousel mi-lista-carousel"> <!-- Clase 'mi-lista-carousel' agregada -->
+    <div class="movie-carousel-inner" id="movie-lista-container"></div>
+    <button class="movie-carousel-control-prev">&#10094;</button>
+    <button class="movie-carousel-control-next">&#10095;</button>
+  </div>
 
 
   <!-- Carrusel Recomendaciones -->
@@ -155,7 +292,7 @@
   <!-- FOOTER END -->
 
   <!-- Scripts -->
-   
+
   <script src="../js/Hamburguesa.js"></script>
   <script src="../js/CarruselHeader.js"></script>
   <script src="../js/CarruselDePelis.js"></script>
@@ -164,4 +301,5 @@
   <script src="../js/Peliculalista.js"></script>
   <script src="../js/Popular.js"></script>
 </body>
+
 </html>
