--- a/htmls/home.html
+++ b/htmls/home.html
@@ -37,7 +37,7 @@
             <a href="#" class="dropdown-item">Próximamente</a>
           </div>
         </div>
-        <div class="auth-buttons">
+        <div class="LoginContainer">
           <a href="#" class="registrarse">Registrarse</a>
           <a href="#"  class="login">Iniciar sesión</a>
         </div>
