--- a/htmls/visionado.html
+++ b/htmls/visionado.html
@@ -9,12 +9,10 @@
 </head>
 <body class="visionado-container">
     <div class="video-container">
-        <video width="100%" height="auto" controls autoplay>
+        <video width="100%" height="auto" controls autoplay loop>
             <source src="../imagenes/Rick Astley - Never Gonna Give You Up (Official Music Video).mp4" type="video/mp4">
         </video>
     </div>
-    <a href="../htmls/home.html" class="back-arrow">
-        <i class="bi bi-arrow-left-circle-fill"></i>
-    </a>
+
 </body>
 </html>
