--- a/htmls/visionado.html
+++ b/htmls/visionado.html
@@ -14,5 +14,8 @@
         </video>
     </div>
 
+    <a href="../htmls/home.html" class="flecha">
+        <i class="bi bi-arrow-left-circle-fill"></i>
+    </a>
 </body>
 </html>
