--- a/htmls/home.html
+++ b/htmls/home.html
@@ -49,9 +49,9 @@
   <!-- SEARCH BAR -->
   <div class="search-bar">
     <input type="text" placeholder="Buscar películas, series, actores..." class="search-input">
-    <button class="search-button">
+    <a class="search-button" href="./detalle_peli.html">
       <i class="bi bi-search"></i>
-    </button>
+    </a>
   </div>
   <!-- SEARCH BAR END -->
 
