--- a/htmls/detalle_peli.html
+++ b/htmls/detalle_peli.html
@@ -27,44 +27,33 @@
 
 <body>
     <!-- HEADER -->
-    <header>
-        <div class="container-header">
-            <a class="logo" href="./home.html">
-                <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
-            </a>
-            <div class="hamburger" id="hamburger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <nav class="nav" id="nav">
-                <a href="#" class="nav-link" style="color: #d94dfc;">Inicio</a>
-                <a href="../htmls/series.html" class="nav-link">Series</a>
-                <a href="../htmls/peliculas.html" class="nav-link">Películas</a>
-                <div class="dropdown" id="dropdown">
-                    <a href="#" class="nav-link dropdown-toggle">Más</a>
-                    <div class="dropdown-menu">
-                        <a href="#" class="dropdown-item">Novedades</a>
-                        <a href="#" class="dropdown-item">Próximamente</a>
-                    </div>
-                </div>
-                <div class="auth-buttons">
-                    <a href="#">Registrarse</a>
-                    <a href="#" class="login-link">Iniciar sesión</a>
-                </div>
-            </nav>
+  <header>
+    <div class="container-header">
+      <a class="logo" href="#">
+        <img src="/imagenes/Logo_200x100-removebg-preview.png" alt="Logo">
+      </a>
+      <div class="hamburger" id="hamburger">
+        <i class="bi bi-list"></i>
+      </div>
+      <nav class="nav" id="nav">
+        <a href="#" class="nav-link">Inicio</a>
+        <a href="../htmls/series.html" class="nav-link">Series</a>
+        <a href="../htmls/peliculas.html" class="nav-link">Películas</a>
+        <div class="dropdown">
+          <a href="#" class="nav-link dropdown-toggle">Más</a>
+          <div class="dropdown-menu">
+            <a href="#" class="dropdown-item">Novedades</a>
+            <a href="#" class="dropdown-item">Próximamente</a>
+          </div>
         </div>
-    </header>
-    <!-- HEADER END -->
-
-    <!-- SEARCH BAR -->
-    <div class="search-bar">
-        <input type="text" placeholder="Buscar películas, series, actores..." class="search-input">
-        <button class="search-button">
-            <i class="bi bi-search"></i>
-        </button>
+        <div class="LoginContainer">
+          <a href="#" class="registrarse">Registrarse</a>
+          <a href="#"  class="login">Iniciar sesión</a>
+        </div>
+      </nav>
     </div>
-    <!-- SEARCH BAR END -->
+  </header>
+  <!-- HEADER END -->
 
 
     <!-- BODY -->
