--- a/htmls/detalle_serie.html
+++ b/htmls/detalle_serie.html
@@ -64,9 +64,9 @@
         <div class="portada__info">
             <img src="../imagenes/logoHannah.png" class="info__logo">
 
-            <img src="../imagenes/compose.png" class="info__compose">
+            <img src="../imagenes/compose.png" alt="20px" class="info__compose">
             <button class="portada__btn añadirLista"><i class="bi bi-plus">Añadir a mi lista</i></button>
-            <h5><br><br>2006-2010 - 4 temporadas - De adolescente a adulto, Comedia</h5>
+            <h5 class="desaparece"><br><br>2006-2010 - 4 temporadas - De adolescente a adulto, Comedia</h5>
         </div>
     </section>
 
