--- a/htmls/series.html
+++ b/htmls/series.html
@@ -50,7 +50,7 @@
   <!-- SEARCH BAR -->
   <div class="search-bar">
     <input type="text" placeholder="Buscar películas, series, actores..." class="search-input">
-    <a class="search-button" href="./detalle_peli.html">
+    <a class="search-button" href="./detalle_serie.html">
       <i class="bi bi-search"></i>
     </a>
   </div>
@@ -66,7 +66,7 @@
           <a href="visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
           <a href="visionado.html"><button class="btn play-btn ocultar">▶</button></a>
           <button class="btn-watch-now">
-            <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
+            <a href="./detalle_serie.html"><i class="bi bi-info-circle"></i></a>
           </button>
         </div>
       </div>
