--- a/htmls/series.html
+++ b/htmls/series.html
@@ -77,7 +77,7 @@
           <a href="visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
           <a href="visionado.html"><button class="btn play-btn ocultar">▶</button></a>
           <button class="btn-watch-now">
-            <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
+            <a href="detalle_serie.html"><i class="bi bi-info-circle"></i></a>
           </button>
         </div>
       </div>
@@ -88,7 +88,7 @@
           <a href="visionado.html"><button class="btn-watch-now aparecer">VER AHORA</button></a>
           <a href="visionado.html"><button class="btn play-btn ocultar">▶</button></a>
           <button class="btn-watch-now">
-            <a href="detalle_peli.html"><i class="bi bi-info-circle"></i></a>
+            <a href="detalle_serie.html"><i class="bi bi-info-circle"></i></a>
           </button>
         </div>
       </div>
